--- a/animelista_website/package.json
+++ b/animelista_website/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^5.3.3",
     "core-js": "^3.8.3",
     "jquery": "^3.7.1",
+    "pinia": "^2.2.6",
     "vue": "^3.2.13"
   },
   "devDependencies": {
