--- a/animelista_server/package.json
+++ b/animelista_server/package.json
@@ -17,6 +17,7 @@
     "express-session": "^1.18.1",
     "glob": "^11.0.0",
     "js-yaml": "^4.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mysql": "^2.18.1",
     "mysql2": "^3.11.4",
     "rimraf": "^6.0.1"
