--- a/client/.env.development
+++ b/client/.env.development
@@ -1,3 +1,3 @@
-VUE_APP_UPDATE_RECORD=https://127.0.0.1:8000/update
-VUE_APP_USER_VALID=https://127.0.0.1:8000/user/valid
-VUE_APP_USER_CHECK=https://127.0.0.1:8000/user/checkActivSession
+VUE_APP_UPDATE_RECORD=http://127.0.0.1:8000/update
+VUE_APP_USER_VALID=http://127.0.0.1:8000/user/valid
+VUE_APP_USER_CHECK=http://127.0.0.1:8000/user/checksession
