--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "ajv": "^8.17.1",
     "anymatch": "^3.1.3",
+    "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "chokidar": "^4.0.1",
     "core-js": "^3.8.3",
