--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "express-mysql-session": "^3.0.3",
     "express-session": "^1.18.1",
     "glob": "^11.0.0",
+    "html-entities": "^2.5.2",
     "js-yaml": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
     "mysql": "^2.18.1",
