--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,21 @@
 {
-    "editor.fontFamily": "'Consolas', monospace"
+    "editor.fontFamily": "'Consolas', monospace",
+    "editor.suggest.selectionMode": "never",
+    "scm.compactFolders": true,
+    "editor.inlineSuggest.enabled": false,
+    "editor.acceptSuggestionOnCommitCharacter": false,
+    "editor.acceptSuggestionOnEnter": "off",
+    "editor.inlineSuggest.edits.experimental.enabled": false,
+    "editor.inlineSuggest.edits.experimental.onlyShowWhenCloseToCursor": false,
+    "editor.inlineSuggest.showToolbar": "never",
+    "editor.quickSuggestions": {
+        "other": "off"
+    },
+    "editor.screenReaderAnnounceInlineSuggestion": false,
+    "editor.snippetSuggestions": "none",
+    "editor.suggest.filterGraceful": false,
+    "editor.suggest.matchOnWordStartOnly": false,
+    "editor.hover.enabled": false,
+    "editor.hover.sticky": false,
+    "editor.parameterHints.enabled": false
 }
