--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "pinia": "^2.2.6",
     "pinia-plugin-persistedstate": "^4.1.3",
     "vue": "^3.2.13",
+    "vue-multiselect": "^3.1.0",
     "vue-router": "^4.4.5"
   },
   "devDependencies": {
