--- a/server/package.json
+++ b/server/package.json
@@ -1,8 +1,7 @@
 {
   "name": "animelista_server",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -27,5 +26,6 @@
     "rimraf": "^6.0.1",
     "sharp": "^0.33.5",
     "validator": "^13.12.0"
-  }
+  },
+  "description": ""
 }
