--- a/server/package.json
+++ b/server/package.json
@@ -21,8 +21,10 @@
     "jsonwebtoken": "^9.0.2",
     "mysql": "^2.18.1",
     "mysql2": "^3.11.4",
+    "nodemailer": "^6.10.0",
     "rimraf": "^6.0.1",
     "sharp": "^0.33.5",
+    "uuid": "^11.0.5",
     "validator": "^13.12.0"
   },
   "description": ""
